fix: fix header z-index

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  z-index: 999;
   @media screen and (max-width: 800px) {
     height: 150px;
   }
